@@ -21,7 +21,6 @@
 
 package io.crate.expression.operator;
 
-import com.google.common.collect.ImmutableList;
 import io.crate.data.Input;
 import io.crate.expression.symbol.Function;
 import io.crate.expression.symbol.Literal;
@@ -29,10 +28,11 @@ import io.crate.expression.symbol.Symbol;
 import io.crate.expression.symbol.SymbolVisitor;
 import io.crate.metadata.FunctionInfo;
 import io.crate.metadata.TransactionContext;
+import io.crate.metadata.functions.Signature;
 import io.crate.types.DataTypes;
 
+import javax.annotation.Nullable;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
@@ -40,14 +40,35 @@ public class AndOperator extends Operator<Boolean> {
 
     public static final String NAME = "op_and";
     public static final FunctionInfo INFO = generateInfo(NAME, DataTypes.BOOLEAN);
+    public static final Signature SIGNATURE = Signature.scalar(
+        NAME,
+        DataTypes.BOOLEAN.getTypeSignature(),
+        DataTypes.BOOLEAN.getTypeSignature(),
+        DataTypes.BOOLEAN.getTypeSignature()
+    );
+
+    public static void register(OperatorModule module) {
+        module.register(
+            SIGNATURE,
+            (signature, dataTypes) -> new AndOperator(signature)
+        );
+    }
+
+    private final Signature signature;
+
+    public AndOperator(Signature signature) {
+        this.signature = signature;
+    }
+
+    @Nullable
+    @Override
+    public Signature signature() {
+        return signature;
+    }
 
     @Override
     public FunctionInfo info() {
         return INFO;
-    }
-
-    public static void register(OperatorModule module) {
-        module.registerOperatorFunction(new AndOperator());
     }
 
     @Override
@@ -125,7 +146,7 @@ public class AndOperator extends Operator<Boolean> {
         assert second.valueType().equals(DataTypes.BOOLEAN) || second.valueType().equals(DataTypes.UNDEFINED) :
             "second symbol must have BOOLEAN return type to create AND function";
 
-        return new Function(INFO, ImmutableList.of(first, second));
+        return new Function(INFO, SIGNATURE, List.of(first, second));
     }
 
     public static Symbol join(Iterable<? extends Symbol> symbols) {
@@ -138,7 +159,7 @@ public class AndOperator extends Operator<Boolean> {
         }
         Symbol first = symbols.next();
         while (symbols.hasNext()) {
-            first = new Function(INFO, Arrays.asList(first, symbols.next()));
+            first = new Function(INFO, SIGNATURE, List.of(first, symbols.next()));
         }
         return first;
     }
